--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
             <version>1.5.5.Final</version>
             <scope>provided</scope>
         </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-java</artifactId>
+                <version>4.18.1</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.bonigarcia</groupId>
+                <artifactId>webdrivermanager</artifactId>
+                <version>5.6.3</version>
+            </dependency>
     </dependencies>
     <build>
         <plugins>
